--- a/aframe_simple/index.html
+++ b/aframe_simple/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, WebVR! - A-Frame</title>
+    <title>Hello, WebVR on Oculus Go - A-Frame</title>
     <meta name="description" content="Hello, WebVR! - A-Frame">
     <script src="aframe-master.min.js"></script>
+<script>
+navigator.getGamepads()
+</script>
   </head>
   <body>
     <a-scene>
       <a-entity oculus-go-controls></a-entity>
-      <a-entity laser-controls="hand: right"></a-entity>
+      <a-entity gearvr-controls></a-entity>
+      <a-entity laser-controls="hand: left"></a-entity>
       <a-entity hand-controls controller-cursor raycaster="far: 2"></a-entity>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
